Changed html page name to index.html

--- a/details.html
+++ b/details.html
@@ -67,7 +67,7 @@
     <script>
         function goBack() {
             // Navigate back to the homepage
-            window.location.href = "codingschool.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
