--- a/details.html
+++ b/details.html
@@ -16,24 +16,24 @@
         .details-card {
             margin: 50px auto;
             padding: 20px;
-            max-width: 600px;
+            max-width: 500px;
             background: #fff;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
         .details-card h1 {
             font-size: 2rem;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             color: #c62828;
         }
         .details-card p {
             font-size: 1.2rem;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         iframe {
             width: 100%;
             height: 300px;
-            margin-top: 20px;
+            margin-top: 10px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -41,15 +41,16 @@
             padding: 10px 20px;
             font-size: 1rem;
             color: #fff;
-            background: #1aa50d;
+            background: #0f7829;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             margin-top: 20px;
         }
         button:hover {
-            background: #0ba144;
+            background: #0f853b;
         }
+        
     </style>
 </head>
 <body>
@@ -62,7 +63,7 @@
         <p>⏰ <strong>Time:</strong> 10:30 AM</p>
         <p>📍 <strong>Venue:</strong> Coding School by HACA, Panniyankara</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.4850182264104!2d75.78923757510667!3d11.225687488951706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba6593a6edc0001%3A0x498526eef1bf3530!2sHARIS%26CO.%20ACADEMY!5e0!3m2!1sen!2sin!4v1734339343323!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <button onclick="goBack()">Go Back</button>
+        <button class="btn btn-success"  onclick="goBack()">Go Back</button>
     </div>
     <script>
         function goBack() {
